@@ -650,7 +650,7 @@ extern int
 scontrol_encode_hostlist(char *hostlist)
 {
 	char *io_buf = NULL, *tmp_list, *ranged_string;
-	int buf_size = 0;
+	int buf_size = 1024 * 1024;
 	hostlist_t hl;
 
 	if (!hostlist) {
@@ -665,7 +665,6 @@ scontrol_encode_hostlist(char *hostlist)
 			fprintf(stderr, "Can not open %s\n", hostlist);
 			return SLURM_ERROR;
 		}
-		buf_size = 1024 * 1024;
 		io_buf = xmalloc(buf_size);
 		buf_read = read(fd, io_buf, buf_size);
 		close(fd);
@@ -680,9 +679,12 @@ scontrol_encode_hostlist(char *hostlist)
 	} else
 		tmp_list = hostlist;
 
-	buf_size = strlen(tmp_list) + 1;
-	ranged_string = xmalloc(buf_size);
 	hl = hostlist_create(tmp_list);
+	if (hl == NULL) {
+		fprintf(stderr, "Invalid hostlist: %s\n", tmp_list);
+		return SLURM_ERROR;
+	}
+	ranged_string = xmalloc(buf_size);
 	hostlist_ranged_string(hl, buf_size, ranged_string);
 	printf("%s\n", ranged_string);
 	hostlist_destroy(hl);
